2011-05-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Ship polyfeat by default.

	* bin/pocc-checkout: Do not re-download the archive(s) if not
	needed.

2011-05-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-clastops.c,
	* driver/src/options.h,
	* driver/src/options.c,
	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am,
	* bin/pocc-util.in: Conditional compilation of devel modules.

	* configure.ac: Bump to 1.0-rc4, provide --enable-release.

	* install.sh: Provide --enable-release when in local/stable mode.

2011-05-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg,
	* config/devel/configure.cfg: Update to the latest version of
	CLooG (0.16.2) and ISL (0.06).

2011-05-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Systematically compile PAST.

2011-05-10  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-clastops.c,
	* driver/pocc/include/pocc/options.h,
	* driver/pocc/Makefile.am,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Provide option --use-past, optionally use
	the PAST pretty-printer after CLAST creation (CLAST -> PAST ->
	pretty-print), link with the PAST IR module.

	* config/devel/driver.cfg,
	* config/devel/configure.cfg: Systematically compile the module
	ir/past for the devel mode.

	* generators/scripts/ploog,
	* generators/scripts/inscop: Update to support new PAST
	pretty-print indentation.
	* tests/tests/gemver/gemver.plutotileparunrollprev.c,
	* tests/tests/gemver/gemver.plutotileparunroll.c,
	* tests/tests/gemver/gemver.plutotile.c,